syntax                           = "proto3";
package raftservice;

import "eraftpb.proto";

service RaftService {
  rpc MemberBootstrapReady(MemberBootstrapReadyArgs) returns (RaftMessageResponse) {}
  rpc BootstrapReady(BootstrapReadyArgs) returns (RaftMessageResponse) {}
  rpc RequestId(IdRequestArgs) returns (IdRequestResponse) {}
  rpc ChangeConfig(eraftpb.ConfChangeV2) returns (ChangeConfigResponse) {}
  rpc SendMessage(eraftpb.Message) returns (RaftMessageResponse) {}
  rpc RerouteMessage(RerouteMessageArgs) returns (RaftMessageResponse) {}
}

// Used in Static Member's Bootstrap

message MemberBootstrapReadyArgs {
  uint64 follower_id              = 1;
}

message BootstrapReadyArgs {
  bytes peers                     = 1;
}

// Used in SendMessage

message RaftMessageResponse {
  bytes data                     = 1;
}

// Config Change

enum ChangeConfigResult {
  ChangeConfig_Success                    = 0;
  ChangeConfig_WrongLeader                = 1;
  ChangeConfig_TimeoutError               = 2;
  ChangeConfig_UnknownError               = 3;
}

message ChangeConfigResponse {
  ChangeConfigResult result      = 1;
  bytes data                     = 2;
}

// IdRequest for Dynamic Membership

message IdRequestArgs {
  string addr                    = 1;
}

enum IdRequestResult {
  IdRequest_Success              = 0;
  IdRequest_Error                = 1;
  IdRequest_WrongLeader          = 2;
}

message IdRequestResponse {
  IdRequestResult result         = 1;
  bytes data                     = 2;
}

// Message Rerouting

enum RerouteMsgType {
  ConfChange                     = 0;
  Propose                        = 1;
}

message RerouteMessageArgs {
  bytes proposed_data            = 1;
  eraftpb.ConfChangeV2 conf_change = 2;
  RerouteMsgType type            = 3;
}
